# Rockfish

./: Cargo.toml  README.md  build_rs_cov.profraw
.cargo/: config.toml
src/: benchmark.rs  bitbases.rs  bitboard.rs  endgame.rs  evaluate.rs  main.rs  material.rs  misc.rs  movegen.rs  movepick.rs  pawns.rs  position.rs  psqt.rs  search.rs  tb.rs  threads.rs  timeman.rs  tt.rs  types.rs  uci.rs  ucioption.rs
src/types/: bound.rs  depth.rs  direction.rs  key.rs  scale_factor.rs
