[package]
name = "rockfish"
version = "0.1.0"
edition = "2021"
authors = ["Syzygy", "SunnyWar"]

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release] 
debug = true
strip = false
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
lazy_static = "1.5.0"
memmap = "0.7.0"
mimalloc = "0.1.43"
ndarray = "0.16.1"
once_cell = "1.20.2"
parking_lot = "0.12.3"
