[package]
name = "rockfish"
version = "0.1.0"
edition = "2021"
authors = ["Syzygy", "SunnyWar"]

[toolchain]
channel = "nightly"

[profile.release]
opt-level = 3
debug = true
strip = false
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.dist]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
lazy_static = "1.5.0"
memmap = "0.7.0"
mimalloc = "0.1.43"
ndarray = "0.16.1"
once_cell = "1.20.2"
parking_lot = "0.12.3"
rustc-hash = "2.0.0"
